--- a/volume-backup-snapvault/concept_snapvault_configuration_workflow.adoc
+++ b/volume-backup-snapvault/concept_snapvault_configuration_workflow.adoc
@@ -13,4 +13,12 @@ Configuring a SnapVault backup relationship includes verifying the cluster peer 
 
 image::../media/snapvault_workflow.gif[This illustration is a flowchart of the SnapVault backup configuration workflow workflow. The steps in the workflow match the topics.]
 
+Additional documentation is available to help you restore data from a destination volume to test the backed-up data or when the source volume is lost.
+
+
+* xref:../volume-restore-snapvault/index.html[Volume restore management using SnapVault]
++
+Describes how to quickly restore a volume from a SnapVault backup in ONTAP
+
+// 2022-6-30, feedback from Ed to move Additional info statement to this topic
 // BURT 1448684, 31 JAN 2022
