--- a/nfs-config-esxi/task_verifying_that_nfs_is_enabled_on_existing_svm.adoc
+++ b/nfs-config-esxi/task_verifying_that_nfs_is_enabled_on_existing_svm.adoc
@@ -1,10 +1,10 @@
 ---
 permalink: nfs-config-esxi/task_verifying_that_nfs_is_enabled_on_existing_svm.html
 sidebar: sidebar
-keywords: verify, nfs, enable, configure, access, esxi, verify that nfs is enabled on an existing
+keywords: verify, nfs, enable, configure, access, esxi, verify that nfs is enabled on an existing SVM
 summary: "If you choose to use an existing SVM, you must first verify that NFS is enabled on the SVM. You can then configure NFS access and verify that NFS is enabled for ESXi by using ESXi by using Virtual Storage Console."
 ---
-= Verify that NFS is enabled on an existing
+= Verify that NFS is enabled on an existing SVM
 :icons: font
 :imagesdir: ../media/
 
