--- a/iscsi-config-rhel/index.adoc
+++ b/iscsi-config-rhel/index.adoc
@@ -33,7 +33,7 @@ For additional details about SAN Administration, consult the https://docs.netapp
 
 h| To complete this task using... h| Refer to...
 
-| The redesigned System Manager (available with 9.7 and later) | https://docs.netapp.com/us-en/ontap/task_san_provision_linux.html[Provision SAN storage for Linux servers^]
+| The redesigned System Manager (available with 9.7 and later) | https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^]
 | The ONTAP command line interface (CLI) | https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI^]
 |===
 
