--- a/online-help-96-97/index.adoc
+++ b/online-help-96-97/index.adoc
@@ -9,12 +9,7 @@ summary: "System Manager is a graphical management interface that enables you to
 :imagesdir: ../media/
 
 [.lead]
-System Manager is a graphical management interface that enables you to manage storage systems and storage objects (such as disks, volumes, and aggregates) and perform common management tasks related to storage systems from a web browser. As a cluster administrator, you can use System Manager to administer the entire cluster and its resources.
-
-[NOTE]
-====
-System Manager is no longer available as an executable file and is now included with ONTAP software as a web service, enabled by default, and accessible by using a browser.
-====
+System Manager is an HTML5-based graphical management interface that enables you to manage storage systems and storage objects (such as disks, volumes, and aggregates) and perform common management tasks related to storage systems from a web browser. System Manager is included with ONTAP software as a web service, enabled by default, and accessible by using a browser. As a cluster administrator, you can use System Manager to administer the entire cluster and its resources. 
 
 [NOTE]
 ====
@@ -66,3 +61,5 @@ Link arrow
 a|
 If this is displayed next to a line item in a dashboard pane, clicking it links to another page from which you can get more information about the line item or make changes to the line item.
 |===
+
+// 2023 Jul 30, ONTAPDOC-1001
