--- a/online-help-96-97/index.adoc
+++ b/online-help-96-97/index.adoc
@@ -62,4 +62,5 @@ a|
 If this is displayed next to a line item in a dashboard pane, clicking it links to another page from which you can get more information about the line item or make changes to the line item.
 |===
 
+// 2023-Aug-8, redo ONTAPDOC-1001
 // 2023 Jul 30, ONTAPDOC-1001
