--- a/volume-disaster-prep/task_creating_snapmirror_relationships_92_earlier.adoc
+++ b/volume-disaster-prep/task_creating_snapmirror_relationships_92_earlier.adoc
@@ -58,7 +58,7 @@ a|
  .. Select the destination aggregate.
 
 +
-image::../media/destination_volume_settings.gif[]
+image::../media/destination_volume_settings.gif[Destination volume settings]
 . In the *Configuration Details* section, select *MirrorAllSnapshots* as the mirror policy.
 +
 `DPDefault` and `MirrorLatest` are the other default mirror policies that are available for SnapMirror relationships.
@@ -68,20 +68,22 @@ image::../media/destination_volume_settings.gif[]
 +
 Initializing the SnapMirror relationship ensures that the destination volume has a baseline to start protecting the source volume.
 +
-image::../media/create_snapmirror_relationship_window.gif[]
+image::../media/create_snapmirror_relationship_window.gif[Create SnapMirror window]
 +
 The relationship is initialized by starting a baseline transfer of data from the source volume to the destination volume.
 +
 The initialization operation might take some time. The Status section shows the status of each job.
 +
-image::../media/snapmirror_create_3_successful.gif[]
+image::../media/snapmirror_create_3_successful.gif[Create SnapMirror successful]
 
 . Verify the relationship status of the SnapMirror relationship:
  .. Select the volume for which you created the SnapMirror relationship from the *Volumes* list, and then click *Data Protection*.
  .. In the *Data Protection* tab, verify that the SnapMirror relationship that you created is listed and that the relationship state is `Snapmirrored`.
 +
-image::../media/snapmirror_create_4_verify.gif[]
+image::../media/snapmirror_create_4_verify.gif[Verify relationship was created]
 
 == What to do next
 
 You must make a note of the settings for the source volume such as thin provisioning, deduplication, compression, and autogrow. You can use this information to verify the destination volume settings when you break the SnapMirror relationship.
+
+// 2023-Aug-8, fix Lipi errors
