Added Cisco DUO as an IdP to satisfy ONTAPDOC-1316 hotfix.

--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -30,7 +30,11 @@ See the documentation that is provided by the IdP that you have configured.
 
 .About this task
 
-The IdPs that have been validated with System Manager are Shibboleth and Active Directory Federation Services.
+The following IdPs have been validated with System Manager: 
+
+* Shibboleth
+* Active Directory Federation Services
+* Cisco DUO
 
 [NOTE]
 ====
