--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -34,7 +34,7 @@ The following IdPs have been validated with System Manager:
 
 * Shibboleth
 * Active Directory Federation Services
-* Cisco DUO
+* Cisco DUO (ONTAP 9.7P21 and later only)
 
 [NOTE]
 ====
