--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -33,7 +33,7 @@ See the documentation that is provided by the IdP that you have configured.
 The following IdPs have been validated with System Manager: 
 
 * Active Directory Federation Services
-* Cisco DUO (ONTAP 9.7P21 and later 9.7 patches only)
+* Cisco DUO (ONTAP 9.7P21 and later 9.7 releases only)
 * Shibboleth
 
 [NOTE]
