--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -33,7 +33,13 @@ See the documentation that is provided by the IdP that you have configured.
 The following IdPs have been validated with System Manager: 
 
 * Active Directory Federation Services
-* Cisco DUO (ONTAP 9.7P21 and later 9.7 releases only)
+* Cisco DUO (validated with the following ONTAP versions:)
+** 9.7P21 and later 9.7 releases 
+** 9.8P17 and later 9.8 releases
+** 9.9.1P13 and later 9.9 releases
+** 9.10.1P9 and later 9.10 releases
+** 9.11.1P4 and later 9.11 releases
+** 9.12.1 and later releases
 * Shibboleth
 
 [NOTE]
